Removing intersect animations and upgrading Ionic

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 	<link rel='stylesheet' href='/css/variables.css'>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core@6.0.0-beta.7/css/ionic.bundle.css"/>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core@6.0.0-rc.0/css/ionic.bundle.css"/>
 
   <link
     rel="stylesheet"
@@ -18,8 +18,8 @@
   />
 
 	<script defer src='/build/bundle.js'></script>
-	<script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core@6.0.0-beta.7/dist/ionic/ionic.esm.js"></script>
-	<script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core@6.0.0-beta.7/dist/ionic/ionic.js"></script>
+	<script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core@6.0.0-rc.0/dist/ionic/ionic.esm.js"></script>
+	<script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core@6.0.0-rc.0/dist/ionic/ionic.js"></script>
 </head>
 
 <body>
