--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,11 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>Greg Marine - The Website</title>
+	<title>Greg Marine</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
-	<link rel='stylesheet' href='/css/variables.css'>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core@6.0.0-rc.0/css/ionic.bundle.css"/>
-
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/tailwindcss/dist/tailwind.min.css"
-  />
 
 	<script defer src='/build/bundle.js'></script>
 	<script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core@6.0.0-rc.0/dist/ionic/ionic.esm.js"></script>
